@@ -43,10 +43,11 @@ coverage_cutoff = 70
 #          11-Dec-2019 jdw Py38 version
 #          10-Dec-2020 jdw py39 version
 #           9-Jan-2023 aae updates for tox 4
+#           9-Dec-2024 dwp py310 version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}, test_coverage-{py39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}, test_coverage-{py310}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -58,33 +59,9 @@ allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
     {envpython} -V -m pip install -U pip
-basepython = py39: python3.9
-             py27: python2.7
+basepython = py310: python3.10
 
-[testenv:py27]
-description = 'Run unit tests (unittest runner) using {envpython}'
-platform=
-       macos: darwin
-       linux: linux
-skip_install = false
-recreate = true
-alwayscopy=true
-package = editable-legacy
-deps =
-       -r requirements.txt
-commands =
-    echo "Starting {envname}"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_1} --pattern "{[local_settings]fixture_pattern_1}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_2} --pattern "{[local_settings]fixture_pattern_2}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_3} --pattern "{[local_settings]fixture_pattern_3}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern_1}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern_2}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern_3}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern_4}"
-    echo "Completed {envname}"
-
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -108,7 +85,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -124,7 +101,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -138,7 +115,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -154,7 +131,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py310]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
