@@ -29,3 +29,4 @@
    8-Feb-2022  - V0.38 Change /healthcheck and /alive endpoint return value to True
   12-Aug-2022  - V0.39 Support the creation of a container image of service
    9-Jan-2023  - V0.40 Configuration changes to support tox 4
+   9-Dec-2024  - V0.41 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
